added featurization to compiled notebook

--- a/!part2_grammar_generation.ipynb
+++ b/!part2_grammar_generation.ipynb
@@ -192,7 +192,9 @@
    "metadata": {},
    "source": [
     "### Generation of Expression String\n",
-    "S-expressions are in the form `\"min_slope max_slope note_string|start_time|duration ...\"`"
+    "S-expressions are in the form `\"min_slope max_slope note_string|start_time|duration ...\"`\n",
+    "\n",
+    "**This is the main function that will be used from this section (calls the other two functions above)**"
    ]
   },
   {
@@ -220,6 +222,154 @@
     "## Featurizing S-expressions\n",
     "We currently use 6 different functions to featurize our s-expressions."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Location of the First Note\n",
+    "The fraction of how far into the measure the first note starts."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "loc_first = lambda notes: notes[0][1] % 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Total Duration of Rests\n",
+    "$1 - \\sum\\limits_{note\\in measure} \\text{duration}(note)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "tot_rests = lambda notes: 1 - sum([note[1] for note in notes])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Average Maximum Slope and Order of Contour\n",
+    "The average magnitude of each rising/falling run and how many times the slope changes direction, respectively."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def slope_process(notes):\n",
+    "    slopes = []\n",
+    "    ascending = True\n",
+    "    curr_max = 0\n",
+    "    last_note = notes[0][0]\n",
+    "    direction_changes = 0\n",
+    "    for term in notes[1:]:\n",
+    "        note = term[0]\n",
+    "        dist = note_dist(last_note, note)\n",
+    "        if dist > 0:\n",
+    "            if ascending:\n",
+    "                curr_max = max(curr_max, dist)\n",
+    "            else:\n",
+    "                ascending = True\n",
+    "                slopes.append(curr_max)\n",
+    "                curr_max = dist\n",
+    "                direction_changes += 1\n",
+    "        if dist < 0:\n",
+    "            if not ascending:\n",
+    "                curr_max = max(curr_max, -dist)\n",
+    "            else:\n",
+    "                ascending = False\n",
+    "                slopes.append(curr_max)\n",
+    "                curr_max = -dist\n",
+    "                direction_changes += 1\n",
+    "        last_note = note\n",
+    "    slopes.append(curr_max)\n",
+    "    return np.mean(slopes), direction_changes\n",
+    "\n",
+    "avg_max_slope = lambda notes: slope_process(notes)[0]\n",
+    "order_contour = lambda notes: slope_process(notes)[1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Consonance\n",
+    "Depends on the category of the notes - a higher value corresponds to more chord tones."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def consonance(s_exp):\n",
+    "    total = 0.0\n",
+    "    measure = s_exp.split(' ')[2:-1]\n",
+    "    \n",
+    "    weights = {'R': 0.1, 'C': 0.8, 'L': 0.4, 'X': 0.1, 'A': 0.6, 'H': 0.6}\n",
+    "    for term in measure:\n",
+    "        note_info = term.split('|')\n",
+    "        note = note_info[0]\n",
+    "        duration = note_info[2]\n",
+    "        if note in weights:\n",
+    "            total += weights[note] * float(duration)\n",
+    "    return total"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using all of the above\n",
+    "**This is the main function that will be used from this section (calls the other five functions above)**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def featurize(args):\n",
+    "    dummy = lambda x: 0\n",
+    "    feature_funcs = [len, loc_first, tot_rests, avg_max_slope, order_contour, consonance]\n",
+    "    arg_num = [0, 0, 0, 0, 0, 1]\n",
+    "    features = {}\n",
+    "    for i, func in enumerate(feature_funcs):\n",
+    "        features[str(i)] = func(args[arg_num[i]])\n",
+    "    return features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
