finished part2 pipeline

--- a/!part2_grammar_generation.ipynb
+++ b/!part2_grammar_generation.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -154,8 +154,8 @@
     "def find_slope_bounds(lst):\n",
     "    max_jump, min_jump = 0, 0\n",
     "    for i in range(len(lst) - 1):\n",
-    "        max_jump = max(max_jump, note_dist(lst[i], lst[i+1]))\n",
-    "        min_jump = min(min_jump, note_dist(lst[i], lst[i+1]))\n",
+    "        max_jump = max(max_jump, find_note_dist(lst[i], lst[i+1]))\n",
+    "        min_jump = min(min_jump, find_note_dist(lst[i], lst[i+1]))\n",
     "    return str(min_jump) + ' ' + str(max_jump)"
    ]
   },
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -285,7 +285,7 @@
     "    direction_changes = 0\n",
     "    for term in notes[1:]:\n",
     "        note = term[0]\n",
-    "        dist = note_dist(last_note, note)\n",
+    "        dist = find_note_dist(last_note, note)\n",
     "        if dist > 0:\n",
     "            if ascending:\n",
     "                curr_max = max(curr_max, dist)\n",
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -350,15 +350,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def featurize(args):\n",
-    "    dummy = lambda x: 0\n",
     "    feature_funcs = [len, loc_first, tot_rests, avg_max_slope, order_contour, consonance]\n",
+    "    assert len(feature_funcs) == num_features, \"Incorrect number of features\"\n",
     "    arg_num = [0, 0, 0, 0, 0, 1]\n",
     "    features = {}\n",
     "    for i, func in enumerate(feature_funcs):\n",
@@ -369,16 +369,279 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Processing a Solo MIDI\n",
+    "Returns two pandas DataFrames representing the s-expressions of this solo and their features."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def process_song(filename, s_exp, features):\n",
+    "    measure = 0\n",
+    "    last_chord = None\n",
+    "    curr_s_exp = []\n",
+    "    song = pd.read_csv('%s/%s'%(start_directory, filename))\n",
+    "    for i in range(len(song)):\n",
+    "        curr_note = song.iloc[i]\n",
+    "        if measure != int(curr_note['start_time']):\n",
+    "            s = create_s_exp(curr_s_exp)\n",
+    "            row_s = {'exp': s, 'song_id': song_num, 'song_index': measure}\n",
+    "            s_exp = s_exp.append(row_s, ignore_index=True)\n",
+    "            row_f = featurize([curr_s_exp, s])\n",
+    "            features = features.append(row_f, ignore_index=True)\n",
+    "            curr_s_exp = []\n",
+    "            measure = int(curr_note['start_time'])\n",
+    "        curr_s_exp.append((curr_note['note_name'], curr_note['start_time'], curr_note['duration'], curr_note['chord'], last_chord))\n",
+    "        last_chord = curr_note['chord']\n",
+    "    #tail of loop\n",
+    "    s = create_s_exp(curr_s_exp)\n",
+    "    row_s = {'exp': s, 'song_id': song_num, 'song_index': measure}\n",
+    "    s_exp = s_exp.append(row_s, ignore_index=True)\n",
+    "    row_f = featurize([curr_s_exp, s])\n",
+    "    features = features.append(row_f, ignore_index=True)\n",
+    "    return s_exp, features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## All together now...\n",
+    "It's all come down to this one for loop..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "start_directory = 'midi_to_csv'\n",
+    "end_directory = 'test_files'\n",
+    "\n",
+    "num_features = 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s_exp = pd.DataFrame(columns=['exp', 'song_id', 'song_index'])\n",
+    "features = pd.DataFrame(columns=[str(i) for i in range(num_features)])\n",
+    "song_num = 0\n",
+    "for filename in os.listdir(start_directory):\n",
+    "    if filename.endswith('chords.csv'): # TODO: CHANGE THIS\n",
+    "        s_exp, features = process_song(filename, s_exp, features)\n",
+    "        song_num += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>exp</th>\n",
+       "      <th>song_id</th>\n",
+       "      <th>song_index</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0 4 A|0.155|0.125 X|0.725|0.290</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0 0 L|0.340|0.678</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-3 0 A|0.174|0.036 X|0.164|0.255 C|0.195|0.443...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0 0 C|0.243|0.004</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-3 7 A|0.073|0.171 C|0.130|0.263 X|0.185|0.408...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 exp song_id song_index\n",
+       "0                   0 4 A|0.155|0.125 X|0.725|0.290        0          0\n",
+       "1                                 0 0 L|0.340|0.678        0          1\n",
+       "2  -3 0 A|0.174|0.036 X|0.164|0.255 C|0.195|0.443...       0          2\n",
+       "3                                 0 0 C|0.243|0.004        0          3\n",
+       "4  -3 7 A|0.073|0.171 C|0.130|0.263 X|0.185|0.408...       0          4"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s_exp.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.125000</td>\n",
+       "      <td>0.584635</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.1040</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.678385</td>\n",
+       "      <td>-0.678385</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.2712</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.036458</td>\n",
+       "      <td>-11.315104</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0272</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.003906</td>\n",
+       "      <td>-2.003906</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0032</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.170573</td>\n",
+       "      <td>-31.157552</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.8419</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     0         1          2    3    4       5\n",
+       "0  2.0  0.125000   0.584635  4.0  0.0  0.1040\n",
+       "1  1.0  0.678385  -0.678385  0.0  0.0  0.2712\n",
+       "2  5.0  0.036458 -11.315104  1.5  1.0  1.0272\n",
+       "3  1.0  0.003906  -2.003906  0.0  0.0  0.0032\n",
+       "4  7.0  0.170573 -31.157552  4.0  2.0  1.8419"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "features.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "s_exp.to_csv('%s/s_exp.csv'%end_directory)\n",
+    "features.to_csv('$s/s_exp_features.csv'%end_directory)"
+   ]
   }
  ],
  "metadata": {
