fixed note_dist for chords

--- a/!part2_grammar_generation.ipynb
+++ b/!part2_grammar_generation.ipynb
@@ -59,7 +59,7 @@
    "source": [
     "# checks if a note is formatted correctly and splits it into its component parts\n",
     "def split_note(note):\n",
-    "    assert re.fullmatch('[A-G](#|b)?[0-7]', note) is not None, 'Note not formatted correctly.'\n",
+    "    assert re.fullmatch('[A-G][#|b]?[0-7]', note) is not None, 'Note not formatted correctly.'\n",
     "    note, octave = note[:-1], int(note[-1])\n",
     "    if note in same_note:\n",
     "        note = same_note[note]\n",
@@ -75,16 +75,18 @@
     "        octave -= 1\n",
     "    return num_to_note[(new_num) % 12] + str(octave)\n",
     "\n",
+    "def get_root(chord):\n",
+    "    r = re.findall('^[A-G][#|b]?', chord) \n",
+    "    assert r is not None, 'Chord does not contain root note'\n",
+    "    return r[0]\n",
+    "\n",
     "# output is positive if note2 is above noteorchord1, 0 if same\n",
     "def find_note_dist(note_or_chord1, note2, chord=False):\n",
-    "    # positive if note2 is above noteorchord1, 0 if same\n",
-    "    tot = 0\n",
+    "    note1 = '%s0'%get_root(note_or_chord1) if chord else note_or_chord1\n",
+    "    note1, octave1 = split_note(note1)\n",
     "    note2, octave2 = split_note(note2)\n",
-    "    if not chord:\n",
-    "        note_or_chord1, octave1 = split_note(note_or_chord1)\n",
-    "        tot += (octave2 - octave1) * 12\n",
-    "    tot += note_to_num[note2] - note_to_num[note_or_chord1]\n",
-    "    return tot"
+    "    dist = (octave2 - octave1) * 12 + note_to_num[note2] - note_to_num[note1]\n",
+    "    return dist % 12 if chord else dist"
    ]
   },
   {
@@ -174,14 +176,14 @@
    },
    "outputs": [],
    "source": [
-    "def categorize_note(note, chord, nextchord):\n",
+    "def categorize_note(note, chord, next_chord):\n",
     "    root = chord[0]\n",
     "    chord_type = find_chord_type(chord)\n",
     "    dist = find_note_dist(root, note, True)\n",
     "    for chord_type, interval_list in chord_dictionary[chord_type].items():\n",
     "        if dist in interval_list:\n",
     "            return chord_type\n",
-    "    if chord == nextchord:\n",
+    "    if chord == next_chord:\n",
     "        return \"X\"\n",
     "    else:\n",
     "        return \"A\""
@@ -433,7 +435,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "s_exp = pd.DataFrame(columns=['exp', 'song_id', 'song_index'])\n",
@@ -607,7 +611,7 @@
        "      <td>-31.157552</td>\n",
        "      <td>4.0</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>1.8419</td>\n",
+       "      <td>2.4775</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -619,7 +623,7 @@
        "1  1.0  0.678385  -0.678385  0.0  0.0  0.2712\n",
        "2  5.0  0.036458 -11.315104  1.5  1.0  1.0272\n",
        "3  1.0  0.003906  -2.003906  0.0  0.0  0.0032\n",
-       "4  7.0  0.170573 -31.157552  4.0  2.0  1.8419"
+       "4  7.0  0.170573 -31.157552  4.0  2.0  2.4775"
       ]
      },
      "execution_count": 18,
